--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+:root {
+    --dark-color: #00112c;
+}
